@@ -12,6 +12,8 @@ Version 1.3.19+svn:
     * New music track, "The King is Dead" by Mattias Westlund.
     * Updated music track, "Traveling Minstrels" by Mattias Westlund.
 
+  * Miscellaneous and bug fixes
+    * Some addons failed to load, this has been fixed.
 
 Version 1.3.19:
   * Language and translations
